--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,5 +56,6 @@ springdoc.swagger-ui.config-url=/api/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/api/v3/api-docs
 
 server.forward-headers-strategy=framework
-server.tomcat.remote-ip-header=x-forwarded-for
-server.tomcat.protocol-header=x-forwarded-proto
+server.tomcat.remoteip.remote-ip-header = X-Forwarded-For
+server.tomcat.remoteip.protocol-header   = CloudFront-Forwarded-Proto
+server.tomcat.remoteip.host-header       = Host
