--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,8 @@ server.tomcat.remoteip.protocol-header   = x-forwarded-proto
 server.tomcat.remoteip.host-header       = Host
 server.servlet.session.cookie.secure=true 
 server.use-forward-headers=true
+
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
