--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,13 @@ spring.security.oauth2.client.registration.google.redirect-uri=https://ec2-stage
 
 
 
+spring.security.oauth2.client.registration.google.client-authentication-method=client_secret_basic
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&prompt=consent
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 
