--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 management.endpoints.web.exposure.include=health,info
 
 # JPA
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -56,6 +56,7 @@ jwt.expirationMinutes=120
 
 spring.jpa.properties.hibernate.validator.apply_to_ddl=false
 spring.thymeleaf.enabled=false
+spring.jpa.properties.hibernate.format_sql=false
 
 
 springdoc.api-docs.path=/api/v3/api-docs
@@ -71,6 +72,6 @@ server.servlet.session.cookie.secure=true
 server.use-forward-headers=true
 
 
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
